# typingGame2

./: CMakeLists.txt
headers/: game.h  text.h
src/: game.cpp  main.cpp  text.cpp
